--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -290,8 +290,34 @@ li {
 	margin-top: 50px;
 }
 .visionIMG {
-	padding: 50px;
-	margin: 20px;
+	padding: 40px;
+	margin: 10px;
 	display: flex;
 	justify-content: center;
+}
+.whiteBOX {
+	/* border: 1px solid black;
+	background: gainsboro; */
+	width: 25%;
+	height: auto;
+	margin: 20px;
+	padding: 25px;
+}
+.visionBOX {
+	border: 2px solid dimgray;
+	background: lightslategray;
+	width: 55%;
+	height: auto;
+	margin: 20px;
+	padding: 25px;
+	color: white;
+}
+.visionBUTTON {
+	margin-top: 20px;
+	border-radius: 5px;
+	width: 150px;
+	height: 35px;
+	border: 2px solid gray;
+	background: dimgray;
+	color: white;
 }
